# orca-agent-advisory

./: .env  pyproject.toml
app/: config.py  main.py
app/agents/: __init__.py  data_agent.py  manager_agent.py  risk_agent.py  sentiment_agent.py  valuation_agent.py
app/application/decision/: manager_synthesis_builder.py
app/application/mappers/: bigdata_ml_mapper.py
app/application/specialists/: sentiment_analysis.py  valuation_analysis.py
app/application/use_cases/: advisory_decision_service.py
app/bootstrap/: container.py
app/crews/: __init__.py  advisory_crew.py
app/crews/config/: agents.yaml  tasks.yaml
app/infrastructure/bigdata/: bigdata_ml_provider.py
app/infrastructure/crewai/crews/: advisory_crew.py
app/infrastructure/llm/: llm_factory.py
app/infrastructure/providers/: sample_tool_result_provider.py
app/llm/: llm_factory.py
app/schemas/: tool_results.py
app/services/: crew_runner.py  decision_service.py
app/tasks/: __init__.py  data_tasks.py  guardrails.py  risk_tasks.py  sentiment_tasks.py  valuation_tasks.py
tests/: conftest.py  test_api_decision_endpoint.py  test_bigdata_ml_provider.py  test_config.py  test_core_agents.py  test_critic_service.py  test_end_to_end.py  test_hierarchical_crew_skeleton.py  test_run_upstream_advisory.py  test_schemas.py
tools/: run_upstream_advisory.py
